--- a/hash_types/src/dune
+++ b/hash_types/src/dune
@@ -1,5 +1,6 @@
 (library (name base_internalhash_types)
  (public_name base.base_internalhash_types) (libraries)
- (preprocess no_preprocessing) (js_of_ocaml (javascript_files runtime.js))
+ (preprocess no_preprocessing)
+ (js_of_ocaml (javascript_files runtime.js) (wasm_files runtime.wat))
  (foreign_stubs (language c) (names internalhash_stubs))
  (install_c_headers internalhash))
