--- a/src/dune
+++ b/src/dune
@@ -10,9 +10,10 @@
 (library (name base) (public_name base)
  (ocamlopt_flags :standard (:include ocamlopt-flags))
  (libraries base_internalhash_types sexplib0 shadow_stdlib)
- (c_flags :standard -D_LARGEFILE64_SOURCE (:include mpopcnt.sexp))
- (c_names bytes_stubs exn_stubs float_stubs int_math_stubs hash_stubs
-  obj_stubs am_testing)
+ (foreign_stubs (language c)
+   (flags :standard -D_LARGEFILE64_SOURCE (:include mpopcnt.sexp))
+   (names bytes_stubs exn_stubs float_stubs int_math_stubs hash_stubs
+    obj_stubs am_testing))
  (preprocess no_preprocessing)
  (lint
   (pps ppx_base ppx_base_lint -check-doc-comments -type-conv-keep-w32=both
