--- a/src/dune
+++ b/src/dune
@@ -25,7 +25,7 @@
 
 (ocamllex hex_lexer)
 
-(documentation)
+(documentation (package base))
 
 (rule (targets ocamlopt-flags) (deps)
  (action (bash "echo '()' > ocamlopt-flags")))
