--- a/test/dune
+++ b/test/dune
@@ -1,5 +1,7 @@
 (library (name base_test)
- (libraries base base_container_tests core.base_for_tests base_test_helpers
+ (libraries base ;base_container_tests
+ core.base_for_tests base_test_helpers
   expect_test_helpers_core.expect_test_helpers_base sexplib sexp_grammar
-  sexp_grammar_validation num stdio uutf)
+  sexp_grammar_validation stdio uutf)
+ (inline_tests (flags -drop-tag no-js -drop-tag 64-bits-only -drop-tag no-wasm) (modes js))
  (preprocess (pps ppx_jane -dont-apply=pipebang -no-check-on-extensions)))
