--- a/src/dune
+++ b/src/dune
@@ -18,7 +18,8 @@
  (lint
   (pps ppx_base ppx_base_lint -check-doc-comments -type-conv-keep-w32=both
    -apply=js_style,base_lint,type_conv,cold))
- (js_of_ocaml (javascript_files runtime.js) (wasm_files runtime.wat)))
+ (js_of_ocaml (javascript_files runtime.js))
+ (wasm_of_ocaml (javascript_files runtime.js) (wasm_files runtime.wat)))
 
 (rule (targets mpopcnt.sexp)
  (action (run ./discover/discover.exe -o %{targets})))
